sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:22: error: value || is not a member of Int
      }   while(ecart =1 ||  x==true)
                         ^AlgCombSort:22: error: type mismatch;
 found   : Unit
 required: Boolean
      }   while(ecart =1 ||  x==true)
                      ^